# Engineering-agent-governor

./: .gitignore  README.md  governor.project.json  pyproject.toml
.governor/: config.json  index.json
docs/: ARCHITECTURE.md  CHATBANG_CURSOR_COLLAB_MODE.md  CHATBANG_GOVERNOR_ADVISOR.md  CHATBANG_GOVERNOR_MODE.md  CLI_REFERENCE.md  CURSOR_GOVERNOR_PROVIDER.md  CURSOR_HEADLESS_RUNNER.md  DASHBOARD_LITE_PREP.md  DOGFOODING.md  EVALUATION_DASHBOARD.md  EVALUATION_METRICS.md  EVIDENCE_BUNDLES.md  GOVERNED_RUNS.md  GOVERNOR_PROVIDER_INNOVATION.md  POLICY_PACKS.md  PROJECT_GOVERNANCE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0-rc1.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.1.md  REPAIR_WORKFLOW.md  REVIEW_PACKAGES.md  RUNNER_PROFILES.md  RUNNER_PROFILE_LOCAL_SETUP.md  RUN_PLANS.md  SELF_DOGFOODING.md  TROUBLESHOOTING.md
examples/: governor.config.example.json
governor/: __init__.py  __main__.py  advisor.py  chatbang_bridge.py  check.py  cleanup.py  cli.py  collab_loop.py  config.py  diagnose.py  dispatch.py  doctor.py  evaluation.py  evaluation_dashboard.py  evidence.py  gates.py  governed_run.py  governor_mode.py  governor_providers.py  index.py  models.py  policy.py  preflight.py  project_config.py  redaction.py  repair.py  repair_artifacts.py  repo_git.py  report.py  review_package.py  run_plan.py  run_store.py  safety_audit.py  templates.py  trace.py  utils.py  verdict.py
scripts/: chatbang_advisor_local_check.py  chatbang_run_example.py  cursor_governor_provider_local_check.py  cursor_runner_local_check.py  eval_collab_session.py  eval_governor_collab_quality.py  fake_agent.py  fake_chatbang.py  fake_cursor_governor.py  provider_proposal_scorecard.py  self_dogfood_release_check.py  setup_voice_assistant_governor_config.py  smoke_chatbang_advisor_workflow.py  smoke_chatbang_governor_mode_workflow.py  smoke_collab_workflow.py  smoke_cursor_governor_provider_workflow.py  smoke_dispatch_workflow.py  smoke_evaluation_accuracy_workflow.py  smoke_evaluation_dashboard_workflow.py  smoke_evaluation_workflow.py  smoke_governed_run_workflow.py  smoke_governor_workflow.py  smoke_plan_workflow.py  smoke_policy_workflow.py  smoke_profile_workflow.py  smoke_project_governance_workflow.py  smoke_repair_workflow.py  smoke_resume_checkpoint_evidence_workflow.py  smoke_stabilization_workflow.py  stream-progress_cursor_cli_example.sh  verify_evaluation_baseline.py
tests/: test_advisor.py  test_chatbang_bridge.py  test_cli.py  test_collab_loop.py  test_config.py  test_dispatch.py  test_dispatch_profile.py  test_doctor.py  test_doctor_config.py  test_evaluation.py  test_evaluation_accuracy.py  test_evaluation_dashboard.py  test_gate_profiles.py  test_gates_security.py  test_git_detection.py  test_governed_run.py  test_governor_mode.py  test_governor_providers.py  test_index.py  (+23 more)
(+150 files in other folders)
